03 Local Variable in PUG

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,7 +4,8 @@ html
         link(rel='stylesheet',
             href='https://use.fontawesome.com/releases/v5.1.1/css/all.css', integrity='sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ',
             crossorigin='anonymous')
-        title MeTube
+        // there spase after | for text
+        title  | #{siteName}
     body
         include ../parts/header
         main
