--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -5,7 +5,7 @@ html
             href='https://use.fontawesome.com/releases/v5.1.1/css/all.css', integrity='sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ',
             crossorigin='anonymous')
         // there spase after | for text
-        title  | #{siteName}
+        title  #{pageTitle}  |  #{siteName}
     body
         include ../parts/header
         main
