--- a/views/join.pug
+++ b/views/join.pug
@@ -2,8 +2,8 @@ extends layouts/main
 
 block content
     h3 Sign Up
-    .form__container
-        form(action="/join", method="post")
+    .form-container
+        form(action=routes.join, method="post")
             input(type="text", name="name", placeholder="Your Name")
             input(type="email", name="email", placeholder="Email")
             input(type="password", name="password", placeholder="Password")
