02 Add fake db to display video player by connecting db to videoController.js as listVideo and display data to videoBlock.pug

--- a/views/parts/socialLogin.pug
+++ b/views/parts/socialLogin.pug
@@ -5,5 +5,5 @@
         |Continue with Github
     button.social-login__facebook
         span
-            i.fab.fa-github
+            i.fab.fa-facebook
         | Continue with Facebook
