--- a/views/parts/header.pug
+++ b/views/parts/header.pug
@@ -7,14 +7,14 @@ header.header
             input(type="text", placeholder="Search by terms..", name="term")
     .header__column
         ul
-            if user.isAuthenticated
+            if !user.isAuthenticated
                 li
                     a(href=routes.join) Join
                 li
                     a(href=routes.login) Log In
             else
                 li
-                    a(href=routes.upload) upload
+                    a(href=routes.upload) Upload
                 li
                     a(href=routes.userDetail) Profile
                 li
