--- a/views/home.pug
+++ b/views/home.pug
@@ -4,6 +4,7 @@ block content
         .videos
                 each item in videoList
                         +videoBlock({
+                                id: item.id,
                                 title:item.title,
                                 views:item.views,
                                 videoFile:item.videoFile
