--- a/views/join.pug
+++ b/views/join.pug
@@ -4,9 +4,9 @@ block content
     h3 Sign Up
     .form-container
         form(action=routes.join, method="post")
-            input(type="text", name="name", placeholder="Your Name")
-            input(type="email", name="email", placeholder="Email")
-            input(type="password", name="password", placeholder="Password")
-            input(type="password", name="passwordVerify", placeholder="Verify Password")
+            input(type="text", name="name", placeholder="Your Name", required=true)
+            input(type="email", name="email", placeholder="Email", required=true)
+            input(type="password", name="password", placeholder="Password", required=true)
+            input(type="password", name="passwordVerify", placeholder="Verify Password", required=true)
             input(type="submit", value="sign up")
     include parts/socialLogin
