01 Using multer as to execute video migration by declare it as middleware that pass videoUpload file from view and set directory upload by declare it in app.js

--- a/views/search.pug
+++ b/views/search.pug
@@ -5,7 +5,7 @@ block content
     .search__header
         h3 Searching of #{searchingBy}
     .search__video
-        each item in videoList
+        each item in videos
             +videoBlock({
                 title: item.title,
                 views: item.views,
