--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ extends layouts/main
 include mixins/videoBlock
 block content
         .videos
-                each item in videoList
+                each item in videos
                         +videoBlock({
                                 id: item.id,
                                 title:item.title,
