01 Updating video, create get to render to view and post to update the video data, set routes editVideo as function, refix videoFile wont show by changing value to item.fileUrl

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,3 +1,10 @@
 extends layouts/main
 block content
-    h1 Video Detail
+    h1 video detail
+    .video__player
+        video(src=`/${video.fileUrl}`, controls=true)
+    .video__info
+        a(href=routes.editVideo(video.id)) Edit Video
+        h5.video__title=video.title
+        span.video__views=video.views
+        p.video__description= video.description
