--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,10 +1,14 @@
 extends layouts/main
 block content
-    h1 video detail
     .video__player
         video(src=`/${video.fileUrl}`, controls=true)
     .video__info
         a(href=routes.editVideo(video.id)) Edit Video
-        h5.video__title=video.title
-        span.video__views=video.views
+        h1.video__title=video.title
+        span.video__views #{video.views} views
         p.video__description= video.description
+    .video__comments
+        if video.comments.length === 1
+            span.video__comments 1 comment
+        else
+            span.video__comments #{video.comments.length} comments
